--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="centered-main-page-element">
-    <p id="top-section-for-adding-element-to-list"><label for="new-task">Add Item</label> </p>
+    <p id="add-element"><label for="new-task">Add Item</label> </p>
       <div class="task-row-wrapper">
         <input id="new-task" class="task" type="text"><button>Add</button>
       </div>
