--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="body">
-    <div class="top-content">
+    <div class="header-content">
       <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
+    <div class="main-content">
       <section id="add-element"><label for="new-task">Add Item</label> </section>
         <div class="task-row-wrapper">
           <input id="new-task" class="task" type="text"><button>Add</button>
