--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
       <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main-content">
-      <section id="add-element"><label for="new-task">Add Item</label> </section>
+      <section id="add-element"><label class="new-task-label" for="new-task">Add Item</label> </section>
         <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text"><button>Add</button>
+          <input id="new-task" class="task input-task" type="text"><button>Add</button>
         </div>
       <h3>Todo</h3>
       <ul id="incomplete-tasks">
         <li>
-          <input type="checkbox"><label class="task">Pay Bills</label>
-          <input type="text" class="task"><button class="edit">Edit</button>
+          <input type="checkbox" class="input-checkbox"><label class="task">Pay Bills</label>
+          <input type="text" class="task input-task"><button class="edit">Edit</button>
           <button class="delete"><img src="./remove.svg" alt="remove-button"></button>
         </li>
         <li class="edit-mode">
           <input type="checkbox"><label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task"><button class="edit">Save</button>
+          <input type="text" value="Go Shopping" class="task input-task"><button class="edit">Save</button>
           <button class="delete"><img src="./remove.svg" alt="remove-button"></button>
         </li>
       </ul>
@@ -31,7 +31,7 @@
       <ul id="completed-tasks">
         <li>
           <input type="checkbox" checked><label class="task">See the Doctor</label>
-          <input type="text" class="task"><button class="edit">Edit</button>
+          <input type="text" class="task input-task"><button class="edit">Edit</button>
           <button class="delete"><img src="./remove.svg" alt="remove-button"></button>
         </li>
       </ul>
