--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
     <div class="main-content">
       <section id="add-element"><label class="new-task-label" for="new-task">Add Item</label> </section>
         <div class="task-row-wrapper">
-          <input id="new-task" class="task input-task" type="text"><button>Add</button>
+          <input id="new-task" class="task input-task input" type="text"><button class="button">Add</button>
         </div>
-      <h3>Todo</h3>
+      <h3 class="todo-header">Todo</h3>
       <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox" class="input-checkbox"><label class="task">Pay Bills</label>
-          <input type="text" class="task input-task"><button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg" alt="remove-button"></button>
+        <li class="edit-mode">
+          <input type="checkbox" class="input input-checkbox"><label class="task">Pay Bills</label>
+          <input type="text" class="task input-task input"><button class="edit button">Edit</button>
+          <button class="delete button"><img src="./remove.svg" alt="remove-button"></button>
         </li>
         <li class="edit-mode">
-          <input type="checkbox"><label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task input-task"><button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg" alt="remove-button"></button>
+          <input type="checkbox" class="input"><label class="task">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task input-task input"><button class="edit button">Save</button>
+          <button class="delete button"><img src="./remove.svg" alt="remove-button"></button>
         </li>
       </ul>
-      <h3>Completed</h3>
+      <h3 class="todo-header">Completed</h3>
       <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked><label class="task">See the Doctor</label>
-          <input type="text" class="task input-task"><button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg" alt="remove-button"></button>
+        <li class="edit-mode">
+          <input type="checkbox" class="input" checked><label class="task">See the Doctor</label>
+          <input type="text" class="task input-task input"><button class="edit button">Edit</button>
+          <button class="delete button"><img src="./remove.svg" alt="remove-button"></button>
         </li>
       </ul>
     </div>
