refactor: adjust HTML-formatting according to rule 1.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="body">
-    <div class="header-content">
+    <section class="header-content">
       <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main-content">
+    </section>
+    <section class="main-content">
       <section id="add-element"><label class="new-task-label" for="new-task">Add Item</label> </section>
         <div class="task-row-wrapper">
           <input id="new-task" class="task input-task input" type="text"><button class="button">Add</button>
@@ -35,7 +35,7 @@
           <button class="delete button"><img src="./remove.svg" alt="remove-button"></button>
         </li>
       </ul>
-    </div>
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
