--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <li class="edit-mode">
           <input type="checkbox" class="input input-checkbox"><label class="task">Pay Bills</label>
           <input type="text" class="task input-task input"><button class="edit button">Edit</button>
-          <button class="delete button"><img src="./remove.svg" alt="remove-button"></button>
+          <button class="delete button"><img src="./remove.svg" alt=""></button>
         </li>
         <li class="edit-mode">
           <input type="checkbox" class="input"><label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task input-task input"><button class="edit button">Save</button>
-          <button class="delete button"><img src="./remove.svg" alt="remove-button"></button>
+          <button class="delete button"><img src="./remove.svg" alt=""></button>
         </li>
       </ul>
       <h3 class="todo-header">Completed</h3>
@@ -32,7 +32,7 @@
         <li class="edit-mode">
           <input type="checkbox" class="input" checked><label class="task">See the Doctor</label>
           <input type="text" class="task input-task input"><button class="edit button">Edit</button>
-          <button class="delete button"><img src="./remove.svg" alt="remove-button"></button>
+          <button class="delete button"><img src="./remove.svg" alt=""></button>
         </li>
       </ul>
     </section>
