refactor: adjust HTML-formatting according to rule 2.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
   <body class="body">
     <section class="header-content">
-      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="header-content__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </section>
     <section class="main-content">
-      <section id="add-element"><label class="new-task-label" for="new-task">Add Item</label> </section>
+      <section id="main-content__add-element"><label class="main-content__add-element__new-task-label" for="new-task">Add Item</label> </section>
         <div class="task-row-wrapper">
           <input id="new-task" class="task input-task input" type="text"><button class="button">Add</button>
         </div>
