refactor: adjust CSS and HTML-formatting according to rule 2.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="body">
-    <section class="header-content">
-      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="header-content__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </section>
-    <section class="main-content">
-      <section id="main-content__add-element"><label class="main-content__add-element__new-task-label" for="new-task">Add Item</label> </section>
+    <header class="header">
+      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="header__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    </header>
+    <main class="main">
+      <section id="main__add-element"><label class="main__add-element__new-task-label" for="new-task">Add Item</label> </section>
         <div class="task-row-wrapper">
           <input id="new-task" class="task input-task input" type="text"><button class="button">Add</button>
         </div>
@@ -35,7 +35,7 @@
           <button class="delete button"><img src="./remove.svg" alt=""></button>
         </li>
       </ul>
-    </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
