--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
     </header>
     <main class="main">
       <section id="main__add-element"><label class="main__add-element__new-task-label" for="new-task">Add Item</label> </section>
-        <div class="task-row-wrapper">
-          <input id="new-task" class="task input-task input" type="text"><button class="button">Add</button>
+        <div class="main__task-row-wrapper">
+          <input id="new-task" class="main__task-row-wrapper__input-task" type="text"><button class="button">Add</button>
         </div>
-      <h3 class="todo-header">Todo</h3>
-      <ul id="incomplete-tasks">
-        <li class="edit-mode">
-          <input type="checkbox" class="input input-checkbox"><label class="task">Pay Bills</label>
-          <input type="text" class="task input-task input"><button class="edit button">Edit</button>
-          <button class="delete button"><img src="./remove.svg" alt=""></button>
+      <h3 class="main__todo-header">Todo</h3>
+      <ul id="incomplete-tasks" class="main__incomplete-tasks">
+        <li class="main__incomplete-tasks__edit">
+          <input type="checkbox" class="main__incomplete-tasks__edit__input-checkbox"><label class="main__incomplete-tasks__edit__label">Pay Bills</label>
+          <input type="text" class="main__incomplete-tasks__edit__input-task"><button class="main__incomplete-tasks__edit__button-edit ">Edit</button>
+          <button class="main__incomplete-tasks__edit__button-remove"><img src="./remove.svg" alt=""></button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox" class="input"><label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task input-task input"><button class="edit button">Save</button>
-          <button class="delete button"><img src="./remove.svg" alt=""></button>
+        <li class="main__incomplete-tasks__edit">
+          <input type="checkbox" class="main__incomplete-tasks__edit__input-checkbox"><label class="main__incomplete-tasks__edit__label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="main__incomplete-tasks__edit__input-task"><button class="main__incomplete-tasks__edit__button-edit">Save</button>
+          <button class="main__incomplete-tasks__edit__button-remove"><img src="./remove.svg" alt=""></button>
         </li>
       </ul>
-      <h3 class="todo-header">Completed</h3>
-      <ul id="completed-tasks">
-        <li class="edit-mode">
-          <input type="checkbox" class="input" checked><label class="task">See the Doctor</label>
-          <input type="text" class="task input-task input"><button class="edit button">Edit</button>
-          <button class="delete button"><img src="./remove.svg" alt=""></button>
+      <h3 class="main__todo-header">Completed</h3>
+      <ul id="completed-tasks" class="main__incomplete-tasks">
+        <li class="main__incomplete-tasks__edit">
+          <input type="checkbox" class="main__incomplete-tasks__edit__input-checkbox" checked><label class="main__incomplete-tasks__edit__label">See the Doctor</label>
+          <input type="text" class="main__incomplete-tasks__edit__input-task"><button class="main__incomplete-tasks__edit__button-edit">Edit</button>
+          <button class="main__incomplete-tasks__edit__button-remove"><img src="./remove.svg" alt=""></button>
         </li>
       </ul>
     </main>
