--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="body">
     <header class="header">
-      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="header__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="header__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
       <section id="main__add-element"><label class="main__add-element__new-task-label" for="new-task">Add Item</label> </section>
@@ -19,7 +19,7 @@
         <li class="main__incomplete-tasks__edit">
           <input type="checkbox" class="main__incomplete-tasks__edit__input-checkbox"><label class="main__incomplete-tasks__edit__label">Pay Bills</label>
           <input type="text" class="main__incomplete-tasks__edit__input-task"><button class="main__incomplete-tasks__edit__button-edit ">Edit</button>
-          <button class="main__incomplete-tasks__edit__button-remove"><img src="./remove.svg" alt=""></button>
+          <button class="main__incomplete-tasks__edit__button-remove"><img class="main__incomplete-tasks__edit__button-remove__img" src="./remove.svg" alt=""></button>
         </li>
         <li class="main__incomplete-tasks__edit">
           <input type="checkbox" class="main__incomplete-tasks__edit__input-checkbox"><label class="main__incomplete-tasks__edit__label">Go Shopping</label>
