refactor: adjust CSS-formatting according to rule 3.6 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="header__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
-      <section id="main__add-element"><label class="main__add-element__new-task-label" for="new-task">Add Item</label> </section>
+      <section id="main__add-element" class="main__add-element"><label class="main__add-element__new-task-label" for="new-task">Add Item</label> </section>
         <div class="main__task-row-wrapper">
-          <input id="new-task" class="main__task-row-wrapper__input-task" type="text"><button class="button">Add</button>
+          <input id="new-task" class="main__task-row-wrapper__input-task" type="text"><button class="main__incomplete-tasks__edit__button-edit">Add</button>
         </div>
       <h3 class="main__todo-header">Todo</h3>
       <ul id="incomplete-tasks" class="main__incomplete-tasks">
