--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       <ul id="incomplete-tasks" class="main__incomplete-tasks">
         <li class="main__incomplete-tasks__edit">
           <input type="checkbox" class="main__incomplete-tasks__edit__input-checkbox"><label class="main__incomplete-tasks__edit__label">Pay Bills</label>
-          <input type="text" class="main__incomplete-tasks__edit__input-task"><button class="main__incomplete-tasks__edit__button-edit ">Edit</button>
+          <input type="text" class="main__incomplete-tasks__edit__input-task task"><button class="main__incomplete-tasks__edit__button-edit ">Edit</button>
           <button class="main__incomplete-tasks__edit__button-remove"><img class="main__incomplete-tasks__edit__button-remove__img" src="./remove.svg" alt=""></button>
         </li>
         <li class="main__incomplete-tasks__edit">
           <input type="checkbox" class="main__incomplete-tasks__edit__input-checkbox"><label class="main__incomplete-tasks__edit__label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="main__incomplete-tasks__edit__input-task"><button class="main__incomplete-tasks__edit__button-edit">Save</button>
+          <input type="text" value="Go Shopping" class="main__incomplete-tasks__edit__input-task task"><button class="main__incomplete-tasks__edit__button-edit">Save</button>
           <button class="main__incomplete-tasks__edit__button-remove"><img src="./remove.svg" alt=""></button>
         </li>
       </ul>
@@ -31,7 +31,7 @@
       <ul id="completed-tasks" class="main__incomplete-tasks">
         <li class="main__incomplete-tasks__edit">
           <input type="checkbox" class="main__incomplete-tasks__edit__input-checkbox" checked><label class="main__incomplete-tasks__edit__label">See the Doctor</label>
-          <input type="text" class="main__incomplete-tasks__edit__input-task"><button class="main__incomplete-tasks__edit__button-edit">Edit</button>
+          <input type="text" class="main__incomplete-tasks__edit__input-task task"><button class="main__incomplete-tasks__edit__button-edit">Edit</button>
           <button class="main__incomplete-tasks__edit__button-remove"><img src="./remove.svg" alt=""></button>
         </li>
       </ul>
