--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
-      <section id="topsectionforaddingelementtolist">
+      <section>
         <label for="new-task">Add Item</label>
         <input id="new-task" class="task" type="text">
         <button>Add</button>
       </section>
     <h3>Todo</h3>
-    <ul id="incompletetasks">
+    <ul id="incomplete-tasks">
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
@@ -24,7 +24,7 @@
         <button class="edit">Edit</button>
         <button class="delete"><img src="./remove.svg" alt="delete-button"></button>
       </li>
-      <li class="editmode">
+      <li class="edit-mode">
         <input type="checkbox">
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
