--- a/index.html
+++ b/index.html
@@ -7,39 +7,39 @@
   </head>
   <body>
     <header class="header">
-      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="header__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
       <section>
-        <label for="new-task">Add Item</label>
-        <input id="new-task" class="task" type="text">
+        <label for="new-task" class="main__label">Add Item</label>
+        <input id="new-task" class=" main__input task" type="text">
         <button>Add</button>
       </section>
-    <h3>Todo</h3>
-    <ul id="incomplete-tasks">
+    <h3 class="main__heading-title" >Todo</h3>
+    <ul id="main__incomplete-tasks">
       <li>
         <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg" alt="delete-button"></button>
+        <label class="main__incomplete-tasks__label task">Pay Bills</label>
+        <input type="text" class="main__incomplete-tasks__input-text task">
+        <button class="main__incomplete-tasks__edit-button edit">Edit</button>
+        <button class="main__incomplete-tasks__delete-button delete"><img src="./remove.svg" alt="delete-button"></button>
       </li>
-      <li class="edit-mode">
+      <li class="main__incomplete-tasks__edit-mode">
         <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg" alt="delete-button"></button>
+        <label class="main__incomplete-tasks__edit-mode__label task">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="main__incomplete-tasks__edit-mode__input task">
+        <button class="main__incomplete-tasks__edit-mode__edit-button edit">Save</button>
+        <button class="main__incomplete-tasks__edit-mode__delete-button delete"><img src="./remove.svg" alt="delete-button"></button>
       </li>
     </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
+    <h3 class="main__heading-title">Completed</h3>
+    <ul id="main__completed-tasks">
       <li>
         <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg" alt="delete-button"></button>
+        <label class="main__completed-tasks__label task">See the Doctor</label>
+        <input type="text" class="main__completed-tasks__input task">
+        <button class="main__completed-tasks__edit-button edit">Edit</button>
+        <button class="main__completed-tasks__delete-button delete"><img src="./remove.svg" alt="delete-button"></button>
       </li>
     </ul>
     </main>
