--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="body">
     <header class="header">
       <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="header__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
@@ -13,33 +13,33 @@
       <section>
         <label for="new-task" class="main__label">Add Item</label>
         <input id="new-task" class=" main__input task" type="text">
-        <button>Add</button>
+        <button class="edit">Add</button>
       </section>
     <h3 class="main__heading-title" >Todo</h3>
-    <ul id="main__incomplete-tasks">
-      <li>
-        <input type="checkbox">
+    <ul id="main__incomplete-tasks" class="main__incomplete-tasks">
+      <li class="main__incomplete-tasks__item items">
+        <input type="checkbox" class="main__incomplete-tasks__item checkbox">
         <label class="main__incomplete-tasks__label task">Pay Bills</label>
         <input type="text" class="main__incomplete-tasks__input-text task">
         <button class="main__incomplete-tasks__edit-button edit">Edit</button>
-        <button class="main__incomplete-tasks__delete-button delete"><img src="./remove.svg" alt="delete-button"></button>
+        <button class="main__incomplete-tasks__delete-button delete"><img class="main__incomplete-tasks__item__img main__delete-img" src="./remove.svg" alt="delete-button"></button>
       </li>
-      <li class="main__incomplete-tasks__edit-mode">
-        <input type="checkbox">
+      <li class="main__incomplete-tasks__edit-mode items">
+        <input type="checkbox" class="main__incomplete-tasks__edit-mode checkbox">
         <label class="main__incomplete-tasks__edit-mode__label task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="main__incomplete-tasks__edit-mode__input task">
         <button class="main__incomplete-tasks__edit-mode__edit-button edit">Save</button>
-        <button class="main__incomplete-tasks__edit-mode__delete-button delete"><img src="./remove.svg" alt="delete-button"></button>
+        <button class="main__incomplete-tasks__edit-mode__delete-button delete"><img class="main__incomplete-tasks__item__img main__delete-img" src="./remove.svg" alt="delete-button"></button>
       </li>
     </ul>
     <h3 class="main__heading-title">Completed</h3>
-    <ul id="main__completed-tasks">
-      <li>
-        <input type="checkbox" checked>
+    <ul id="main__completed-tasks" class="main__completed-tasks">
+      <li class="main__completed-tasks__item items">
+        <input type="checkbox" class="main__completed-tasks__item checkbox" checked>
         <label class="main__completed-tasks__label task">See the Doctor</label>
         <input type="text" class="main__completed-tasks__input task">
         <button class="main__completed-tasks__edit-button edit">Edit</button>
-        <button class="main__completed-tasks__delete-button delete"><img src="./remove.svg" alt="delete-button"></button>
+        <button class="main__completed-tasks__delete-button delete"><img class="main__incomplete-tasks__item__img main__delete-img" src="./remove.svg" alt="delete-button"></button>
       </li>
     </ul>
     </main>
