--- a/index.html
+++ b/index.html
@@ -10,29 +10,36 @@
       <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix"><a class="header__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
-      <section id="main__add-element" class="main__add-element"><label class="main__add-element__new-task-label" for="new-task">Add Item</label> </section>
-        <div class="main__task-row-wrapper">
-          <input id="new-task" class="main__task-row-wrapper__input-task" type="text"><button class="main__incomplete-tasks__edit__button-edit">Add</button>
-        </div>
-      <h3 class="main__todo-header">Todo</h3>
-      <ul id="incomplete-tasks" class="main__incomplete-tasks">
-        <li class="main__incomplete-tasks__edit">
-          <input type="checkbox" class="main__incomplete-tasks__edit__input-checkbox"><label class="main__incomplete-tasks__edit__label">Pay Bills</label>
-          <input type="text" class="main__incomplete-tasks__edit__input-task task"><button class="main__incomplete-tasks__edit__button-edit ">Edit</button>
-          <button class="main__incomplete-tasks__edit__button-remove"><img class="main__incomplete-tasks__edit__button-remove__img" src="./remove.svg" alt=""></button>
+      <section>
+        <label for="new-task" class="main__label">Add Item</label>
+        <input id="new-task" class=" main__input task" type="text">
+        <button class="edit">Add</button>
+      </section>
+      <h3 class="main__heading-title" >Todo</h3>
+      <ul id="main__incomplete-tasks" class="main__incomplete-tasks">
+        <li class="main__incomplete-tasks__item items">
+          <input type="checkbox" class="main__incomplete-tasks__item checkbox">
+          <label class="main__incomplete-tasks__label task">Pay Bills</label>
+          <input type="text" class="main__incomplete-tasks__input-text task">
+          <button class="main__incomplete-tasks__edit-button edit">Edit</button>
+          <button class="main__incomplete-tasks__delete-button delete"><img class="main__incomplete-tasks__item__img main__delete-img" src="./remove.svg" alt="delete-button"></button>
         </li>
-        <li class="main__incomplete-tasks__edit">
-          <input type="checkbox" class="main__incomplete-tasks__edit__input-checkbox"><label class="main__incomplete-tasks__edit__label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="main__incomplete-tasks__edit__input-task task"><button class="main__incomplete-tasks__edit__button-edit">Save</button>
-          <button class="main__incomplete-tasks__edit__button-remove"><img src="./remove.svg" alt=""></button>
+        <li class="main__incomplete-tasks__edit-mode items">
+          <input type="checkbox" class="main__incomplete-tasks__edit-mode checkbox">
+          <label class="main__incomplete-tasks__edit-mode__label task">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="main__incomplete-tasks__edit-mode__input task">
+          <button class="main__incomplete-tasks__edit-mode__edit-button edit">Save</button>
+          <button class="main__incomplete-tasks__edit-mode__delete-button delete"><img class="main__incomplete-tasks__item__img main__delete-img" src="./remove.svg" alt="delete-button"></button>
         </li>
       </ul>
-      <h3 class="main__todo-header">Completed</h3>
-      <ul id="completed-tasks" class="main__incomplete-tasks">
-        <li class="main__incomplete-tasks__edit">
-          <input type="checkbox" class="main__incomplete-tasks__edit__input-checkbox" checked><label class="main__incomplete-tasks__edit__label">See the Doctor</label>
-          <input type="text" class="main__incomplete-tasks__edit__input-task task"><button class="main__incomplete-tasks__edit__button-edit">Edit</button>
-          <button class="main__incomplete-tasks__edit__button-remove"><img src="./remove.svg" alt=""></button>
+      <h3 class="main__heading-title">Completed</h3>
+      <ul id="main__completed-tasks" class="main__completed-tasks">
+        <li class="main__completed-tasks__item items">
+          <input type="checkbox" class="main__completed-tasks__item checkbox" checked>
+          <label class="main__completed-tasks__label task">See the Doctor</label>
+          <input type="text" class="main__completed-tasks__input task">
+          <button class="main__completed-tasks__edit-button edit">Edit</button>
+          <button class="main__completed-tasks__delete-button delete"><img class="main__incomplete-tasks__item__img main__delete-img" src="./remove.svg" alt="delete-button"></button>
         </li>
       </ul>
     </main>
